# legal-agent-standard

./: IDEA.md  README.md  pyproject.toml
src/legal_agent_standard/: __init__.py  agent_engine.py  cli.py
tests/: test_agent_engine.py
